Fix begin block comment
Ignore (*) case.

Co-authored-by: João Fraga <joaoluisfreirefraga@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "language-whyml",
     "displayName": "WhyML",
     "description": "Syntax highlighting for WhyML.",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "franekp",
     "engines": {
         "vscode": "^1.15.0"
@@ -11,16 +11,27 @@
         "Languages"
     ],
     "contributes": {
-        "languages": [{
-            "id": "whyml",
-            "aliases": ["WhyML", "whyml", "why"],
-            "extensions": [".mlw",".why"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "whyml",
-            "scopeName": "source.whyml",
-            "path": "./syntaxes/whyml.tmLanguage.json"
-        }]
+        "languages": [
+            {
+                "id": "whyml",
+                "aliases": [
+                    "WhyML",
+                    "whyml",
+                    "why"
+                ],
+                "extensions": [
+                    ".mlw",
+                    ".why"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "whyml",
+                "scopeName": "source.whyml",
+                "path": "./syntaxes/whyml.tmLanguage.json"
+            }
+        ]
     }
 }
